--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -2,29 +2,33 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Bweny's blog</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <title>Django Boys blog</title>
+        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
         <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
     </head>
     <body>
-        <header class="page-header">
-            <div class="container">
-                {% if user.is_authenticated %}
-                    <a href="{% url 'post_new' %}" class="top-menu">
-                        {% include './icons/file-earmark-plus.svg' %}
-                    </a>
-                {% endif %}
-                <h1><a href="/">Bweny's Blog</a></h1>
-            </div>
-        </header>
-        <main class="container">
+        <div class="page-header">
+            {% if user.is_authenticated %}
+                <a href="{% url 'post_new' %}" class="top-menu"><span class="iconify" data-icon="bi:file-earmark-plus" data-rotate="180deg"></span>
+                </a>
+                <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="iconify" data-icon="bi:pencil-square" data-rotate="180deg" data-flip="horizontal,vertical"></span>
+                </a>
+                <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+            {% else %}
+                <a href="{% url 'login' %}" class="top-menu"><span class="iconify" data-icon="bi:lock" data-rotate="180deg" data-flip="horizontal,vertical"></span>
+                </a>
+            {% endif %}
+            <h1><a href="/">Django Boys Blog</a></h1>
+        </div>
+        <div class="content container">
             <div class="row">
-                <div class="col">
-                    {% block content %}
-                    {% endblock %}
+                <div class="col-md-8">
+                {% block content %}
+                {% endblock %}
                 </div>
             </div>
-        </main>
+        </div>
     </body>
 </html>
